tests/e2e/pass/m39_return_paths.ep
# EXIT: 0
# STDOUT: 7
fun choose(flag: bool): i64 {
    if flag {
        ret 7
    } else {
        ret 9
    }
}
fun main(): void {
    print(itoa(choose(true)))
    print("\n")
}
