tests/e2e/fail/is_null_builtin_collision.ep
# COMPILE_ERROR: cannot redefine builtin function 'is_null'
fun is_null(value: i64): bool {
    false
}
fun main(): void {
}
